@@ -20,9 +20,13 @@ public class CreditCardTypeManager extends ResourceBasedManager<CreditCardType> 
     private static final long serialVersionUID = 2610710155976479839L;
     private static final CreditCardTypeManager CREDIT_CARD_TYPE_MANAGER = new CreditCardTypeManager();
 
-    public static CreditCardTypeManager getInstance() {return CREDIT_CARD_TYPE_MANAGER;}
+    public static CreditCardTypeManager getInstance() {
+        return CREDIT_CARD_TYPE_MANAGER;
+    }
 
-    private CreditCardTypeManager() {super();}
+    private CreditCardTypeManager() {
+        super();
+    }
 
     @Override
     protected Collection<ResourceEntry> getResources() {
@@ -35,7 +39,7 @@ public class CreditCardTypeManager extends ResourceBasedManager<CreditCardType> 
         String key = cctype.toUpperCase();
 
         CreditCardType creditCardType = new CreditCardType(cctype);
-        return Arrays.asList(new Tuple<>(key, creditCardType));
+        return List.of(new Tuple<>(key, creditCardType));
     }
 
     @Override
